--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@ layout: default
 title: JavaScript For Edwon
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+<section class="home">
+    <h1>Blogs</h1>
+    <ul>
+          {% for post in site.posts %}
+          <li>
+              <a href="{{ post.url }}">{{ post.title }}</a> <small>{{ post.date | date: "%B %-d, %Y" }}</small>
+              {{ post.summary }}
+          </li>
+          {% endfor %}
+    </ul>
+</section>
