--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ title: JavaScript For Edwon
 ---
 
 <section class="home">
-    <h1>Blogs</h1>
+    <h3>Blogs</h3>
     <ul>
           {% for post in site.posts %}
           <li>
               <a href="{{ post.url }}">{{ post.title }}</a> <small>{{ post.date | date: "%B %-d, %Y" }}</small>
-              {{ post.summary }}
+              <p>{{ post.summary }}</p>
           </li>
           {% endfor %}
     </ul>
