--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: JavaScript For Edwon
     <ul>
           {% for post in site.posts %}
           <li>
-              <a href="{{ post.url }}">{{ post.title }}</a> <small>{{ post.date | date: "%B %-d, %Y" }}</small>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+              <small>{{ post.date | date: "%B %-d, %Y" }}</small>
               <p>{{ post.summary }}</p>
           </li>
           {% endfor %}
