--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: JavaScript For Edwon
+title: Blogs
 ---
 
 
 <section class="home">
-    <h3>Blogs</h3>
+    {% include bar.html %}
     <ul>
           {% for post in paginator.posts %}
           <li>
