--- a/columns/index.html
+++ b/columns/index.html
@@ -8,6 +8,7 @@ title: Columns
     {% include bar.html %}
     <ul>
         <li>
+            <img src="/images/book.png">
             <a href="/columns/column1/">用技术乱炖Jekyll</a>
         </li>
         <li>
