--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Blogs
     <ul>
           {% for post in paginator.posts %}
           <li>
+              <img src="/images/newspaper.png">
               <a href="{{ post.url }}">{{ post.title }}</a>
               <small>{{ post.date | date: "%B %-d, %Y" }}</small>
           </li>
