--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@ title: About
 
 <section class="home">
     {% include bar.html %}
-
+    <div class="about">
+        <div class="left"></div>
+        <div class="right"></div>
+    </div>
 </section>
 
