--- a/about.html
+++ b/about.html
@@ -4,11 +4,25 @@ title: About
 ---
 
 
-<section class="home">
+<section class="home about">
     {% include bar.html %}
-    <div class="about">
-        <div class="left"></div>
-        <div class="right"></div>
-    </div>
+    <hr />
+    <h2 class="header">林洋 / Edwon Lim</h2>
+    <p class="header">
+        <img src="/images/linyang2.png">
+    </p>
+    <p><strong>前端开发工程师</strong>，现就职于 新浪微博 平台研发部，微博WebIM主程。</p>
+    <p>主要负责微博网页聊天工具WebIM和消息箱功能前端代码的开发和维护。</p>
+    <p>正在从事微博前端核心包STK的新版本的开发工作。</p>
+    <p>负责过Web版微米前端底层核心代码的开发。</p>
+    <p>使用过Titanium、PhoneGap开发过IOS和Android的移动应用。</p>
+    <p>使用过Node—Webkit开发过桌面应用。</p>
+    <p>最近正在研究NodeJS与MVVM框架。</p>
+    <p class="qr">
+        微博：
+        <img src="/images/weibo.jpg">
+        微信：
+        <img src="/images/weixin.jpg">
+    </p>
 </section>
 
