--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@ title: About
 
 
 <section class="home about">
-    {% include bar.html %}
-    <hr />
+    {% include bar.html tag="About" %}
     <h2 class="header">林洋 / Edwon Lim</h2>
     <p class="header">
         <img src="/images/linyang2.png">
