--- a/columns/index.html
+++ b/columns/index.html
@@ -5,7 +5,7 @@ title: Columns
 
 
 <section class="home">
-    {% include bar.html %}
+    {% include bar.html tag="Columns" %}
     <ul>
         <li>
             <img src="/images/book.png">
