--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Blogs
 
 
 <section class="home">
-    {% include bar.html %}
+    {% include bar.html tag="Blogs" %}
     <ul>
           {% for post in paginator.posts %}
           <li>
