--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@ title: Projects
 
 
 <section class="home">
-    {% include bar.html %}
+    {% include bar.html tag="Projects" %}
     <ul>
         {% for project in site.data.projects %}
         <li>
