--- a/columns/acm/index.html
+++ b/columns/acm/index.html
@@ -3,8 +3,8 @@ layout: default
 title: 专栏：每周ACM
 ---
 
-
 <section class="home">
+    {% include bar.html tag="Columns" %}
     <h3>每周ACM</h3>
     <p class="summary">每周一道ACM程序设计题，题目背景多样有趣，读者在做题的同时，能找到其中的乐趣。</p>
     <ul>
