--- a/columns/index.html
+++ b/columns/index.html
@@ -9,6 +9,14 @@ title: Columns
     <ul>
         <li>
             <img src="/images/book.png">
+            <a href="/columns/effective/">《Effective JavaScript》</a>
+        </li>
+        <li>
+            <p>《Effective JavaScript》读书笔记</p>
+        </li>
+        <li></li>
+        <li>
+            <img src="/images/book.png">
             <a href="/columns/column1/">用技术乱炖Jekyll</a>
         </li>
         <li>
