--- a/columns/index.html
+++ b/columns/index.html
@@ -9,6 +9,14 @@ title: Columns
     <ul>
         <li>
             <img src="/images/book.png">
+            <a href="/columns/ysera/">YersaJS —— Web全栈解决方案</a>
+        </li>
+        <li>
+            <p>使用JavaScript为核心开发语言的Web全栈解决方案。</p>
+        </li>
+        <li></li>
+        <li>
+            <img src="/images/book.png">
             <a href="/columns/effective/">《Effective JavaScript》</a>
         </li>
         <li>
@@ -28,7 +36,7 @@ title: Columns
             <a href="/columns/acm/">每周ACM</a>
         </li>
         <li>
-            <p>每周一道ACM程序设计题，题目背景多样有趣，读者在做题的同时，能找到其中的乐趣。</p>
+            <p>每周一道ACM程序设计题，题目背景多样有趣，小伙伴们在做题的同时，能找到其中的乐趣。</p>
         </li>
         <li></li>
     </ul>
