--- a/columns/ysera/index.html
+++ b/columns/ysera/index.html
@@ -5,10 +5,10 @@ title: 专栏：每周ACM
 
 <section class="home">
     {% include bar.html tag="Columns" %}
-    <h3>每周ACM</h3>
-    <p class="summary">每周一道ACM程序设计题，题目背景多样有趣，小伙伴们在做题的同时，能找到其中的乐趣。</p>
+    <h3>YseraJS —— Web全栈解决方案</h3>
+    <p class="summary">使用JavaScript为核心开发语言的Web全栈解决方案。</p>
     <ul>
-        {% for post in site.categories.acm %}
+        {% for post in site.categories.ysera %}
         <li>
             <img src="/images/newspaper.png">
             <a href="{{ post.url }}">{{ post.title }}</a>
